T아카데미 1일차

--- a/20150930/join.html
+++ b/20150930/join.html
@@ -1,10 +1,99 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title></title>
+    <title>회원가입</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+    <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 </head>
 <body>
+<style>
+    hr{
+        border: none;
+        height: 2px;
+        background-color: #333;
+    }
+    #ess,#add{
+        color: darkgray;
+        font-size: 14pt;
+    }
+    button{
+        width: 100px;
+    }
+</style>
+
+<div class="container">
+    <h2>회원 가입</h2>
+    <hr>
+
+    <form class="form-horizontal" role="form">
+        <div class="form-group">
+            <label id="ess" class="control-label col-sm-2" for="essential">필수 사항</label>
+        </div>
+        <div class="form-group">
+            <label class="control-label col-sm-2" for="section">구분</label>
+            <div class="col-sm-10">
+                <label class="radio-inline"><input type="radio" name="section" value="1">내국인</label>
+                <label class="radio-inline"><input type="radio" name="section" value="2">외국인</label>
+            </div>
+        </div>
+        <div class="form-group">
+            <label class="control-label col-sm-2" for="identity">아이디</label>
+            <div class="col-sm-10">
+                <input type="text" class="form-control" id="identity" placeholder="영문, 숫자">
+            </div>
+        </div>
+        <div class="form-group">
+            <label class="control-label col-sm-2" for="pwd">비밀번호</label>
+            <div class="col-sm-10">
+                <input type="password" class="form-control" id="pwd" placeholder="영문, 숫자, 특수문자">
+            </div>
+        </div>
+        <div class="form-group">
+            <label id="add" class="control-label col-sm-2" for="add">추가 사항</label>
+        </div>
+        <div class="form-group">
+            <label class="control-label col-sm-2" for="email">이메일</label>
+            <div class="col-sm-10">
+                <input type="email" class="form-control" id="email" placeholder="ex)test@test.com">
+            </div>
+        </div>
+        <div class="form-group">
+            <label class="control-label col-sm-2" for="phone">휴대폰 번호</label>
+            <div class="col-sm-10">
+                <input type="text" class="form-control" id="phone" placeholder="ex)010-1234-5678">
+            </div>
+        </div>
+        <div class="form-group">
+            <label class="control-label col-sm-2" for="age">나이</label>
+            <div class="col-sm-10">
+                <input type="number" class="form-control" id="age" placeholder="숫자">
+            </div>
+        </div>
+        <div class="form-group">
+            <label class="control-label col-sm-2" for="homepage">홈페이지</label>
+            <div class="col-sm-10">
+                <input type="text" class="form-control" id="homepage" placeholder="ex)http://www.test.com">
+            </div>
+        </div>
+        <div class="form-group">
+            <label class="control-label col-sm-2" for="comment">소개글</label>
+            <div class="col-sm-10">
+                <textarea class="form-control" rows="5" id="comment" placeholder="간단한 소개글을 입력하세요."></textarea>
+            </div>
+        </div>
+        <div class="form-group">
+            <div class="col-sm-offset-4 col-sm-2">
+                <button type="submit" class="btn btn-success" id="reg">등록</button>
+            </div>
+            <div class="col-sm-1">
+                <button type="button" class="btn btn-warning" id="cancel">취소</button>
+            </div>
+        </div>
+    </form>
+</div>
 
 </body>
 </html>
